[package]
name = "enola"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
rand = "0.9.2"
regex = "1.11.2"
reqwest = "0.12.23"
scraper = "0.24.0"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
